--- a/index.html
+++ b/index.html
@@ -3,11 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <h1>Detective</h1>
+    <title>Welcome</title>
 </head>
-<body>
-    
+<body background="images/back.jpg" text="white">
+    <center>
+        <h1>SCAPE FROM REALITY</h1>
+        <img src="images/N_Happy.png" alt="N happy face" width="200" height="200">
+        <!-- Conversation text from the Narrator. -->
+        <p>
+            Hi! Nice seeing you around here. Welcome to the maze of REALITY. Where you can explore, have adventures (sort of), <br>
+            and most importantly you can take a break from daily life and hangout a bit with me, The Narrator! <br>
+            ... <br>
+            <br>
+            Well you dont seem excited. 
+            <br>
+            ... <br>
+            <br>
+            I guess all you want to do is get out of here ASAP. Well to do that you'll have to travel through the maze and find the exit. 
+            <br>
+            Hm.. You are wondering if i know the exit. Well of course i do! But if i tell you that would ruin the FUN. Also I cant get out myself.
+            <br>
+            <br>
+            You will be traveling by clicking urls and eventually find clues that you may open on a new tab. (Yes im aware that we are on a computer and a browser so try not to cheat)
+            <br>
+            <br>
+            <br>
+            So what do you say? Let's see if you can get out I'll narrate your adventure. Nice meeting you, call me N. Click continue to start your journey.
+            <br>
+        </p>
+        <a href="rooms/lobby.html">CONTINUE</a>
+    </center>
 </body>
 </html>
