--- a/rooms/lobby.html
+++ b/rooms/lobby.html
@@ -8,11 +8,21 @@
 <body background="../images/back.jpg" text="white">
     <center>
         <h1>The lobby</h1>
-        <img src="../images/lobby.jpg" alt="N happy face" width="300" height="400">
-        <!-- Conversation text from the Narrator. -->
-        <p>
-           
-        </p>
+
+        <figure>
+            <img src="../images/lobby.jpg" alt="N happy face" width="300" height="400">
+            <figcaption>A infinite hallway with doors that take you to the opposite side of the room.</figcaption>
+        </figure>
+
+        <!-- I use deatils and summary here, as the user may return to some pages over and over again
+            the narrator context may be repetitive. So the user can choose when to show it to remember it.
+         -->
+        <details>
+            <summary>N context and question</summary>
+            <p></p>
+        </details>
     </center>
+
+    
 </body>
 </html>
