Elevetor room implemented and added more rooms

--- a/rooms/elevator.html
+++ b/rooms/elevator.html
@@ -7,11 +7,11 @@
 </head>
 <body background="../images/back.jpg" text="white">
     <center>
-        <h1>The lobby</h1>
+        <h1>Outside the elevator</h1>
 
         <figure>
-            <img src="../images/lobby.jpg" alt="lobby img" width="300" height="400">
-            <figcaption>An infinite hallway with doors that take you to the opposite side of the room.</figcaption>
+            <img src="../images/elevator.jpg" alt="Eelevator img" width="300" height="400">
+            <figcaption>It seems like a small room after you leave the elevator</figcaption>
         </figure>
 
         <!-- I use deatils and summary here, as the user may return to some pages over and over again
@@ -19,13 +19,13 @@
          -->
         <details>
             <summary>N context and question</summary>
-            <p> You seem a bit lost, but you notice 2 different paths that seem to lead to another place:</p>
+            <p> There is only 1 door in front of you that has the leters EXIT you made it!</p>
         </details>
 
         <!-- User options-->
         <ul>
-            <li><a href="stair.html">Follow stairs and go down</a></li>
-            <li><a href="elevator.html">Take elevator and go up</a></li>
+            <li><a href="exit.html">Enter the Exit door</a></li>
+            <li><a href="lobby.html">Take elevator again and go up</a></li>
         </ul>
     </center>
 
