Exit room implemented, adde clues images

--- a/rooms/elevator.html
+++ b/rooms/elevator.html
@@ -19,7 +19,7 @@
          -->
         <details>
             <summary>N context and question</summary>
-            <p> There is only 1 door in front of you that has the leters EXIT you made it!</p>
+            <p> There is only 1 door that appeared out of nowhere behind you. It has the leters EXIT, you made it!</p>
         </details>
 
         <!-- User options-->
