Added stair room

--- a/rooms/exit.html
+++ b/rooms/exit.html
@@ -10,7 +10,7 @@
         <h1>Inside the exit door</h1>
 
         <figure>
-            <img src="../images/exit.jpg" alt="Eelevator img" width="300" height="400">
+            <img src="../images/exit.jpg" alt="exit img" width="300" height="400">
             <figcaption>Look another Exit, How lucky! However, suddenly it seems like you are not alone</figcaption>
         </figure>
 
