--- a/rooms/faint.html
+++ b/rooms/faint.html
@@ -10,7 +10,7 @@
         <h1>Oh oh...</h1>
 
         <figure>
-            <img src="../images/faint.png" alt="Eelevator img" width="600" height="400">
+            <img src="../images/faint.png" alt="faint img" width="600" height="400">
             <figcaption>YOU FAINTED :O</figcaption>
         </figure>
 
@@ -18,8 +18,8 @@
             the narrator question information might get repetitive. So the user can choose when to show it to remember it.
          -->
         <details>
-            <summary>N context and question</summary>
-            <p> Well apparently you were not able to outrun whatever was following you. But now we get more time to have fun!</p>
+            <summary>N context and comment</summary>
+            <p> Whoops that maybe was a bad idea, my bad I guess. But now we get more time to have fun!</p>
         </details>
 
         <!-- User options-->
