Made hotel room and added more files

--- a/rooms/hotel.html
+++ b/rooms/hotel.html
@@ -7,11 +7,11 @@
 </head>
 <body background="../images/back.jpg" text="white">
     <center>
-        <h1>The stairs</h1>
+        <h1>The Hotel</h1>
 
         <figure>
-            <img src="../images/stairs.jpg" alt="exit img" width="300" height="400">
-            <figcaption>It smells like summer. The water has flooded part of the building</figcaption>
+            <img src="../images/hotel.jpg" alt="exit img" width="600" height="400">
+            <figcaption>A hotel with an inside pool that can't get reached apparently</figcaption>
         </figure>
 
         <!-- I use deatils and summary here, as the user may return to some pages over and over again
@@ -19,15 +19,17 @@
          -->
         <details>
             <summary>N context and question</summary>
-            <p> Look a pool! How cool is that? Lets chill for a bit and enjoy the water</p>
+            <p>This room is very interesting might as well explre it, and Oh look an exit!</p>
         </details>
 
         <!-- User options-->
         <ul>
-            <li><a href="pool.html">Swim down</a></li>
-            <li><a href="faint.html">Jump to the left window and enjoy the water</a></li>
+            <li><a href="exit.html">Enter the exit room</a></li>
+            <li><a href="pool.html">Jump to the unreachable pool</a></li>
             <li><a href="faint.html">Ask N where should you go next</a></li>
-            <li><a href="hotel.html">Go forward and upstairs</a></li>
+            <li><a href="riddle1.html">Go froward and then take little stairs to enter a room (extremely dangerous)</a></li>
+            <li><a href="hotel.html">Go forward to the of the room</a></li>
+
         </ul>
     </center>
 
