Added succes event fro pool

--- a/rooms/hotel.html
+++ b/rooms/hotel.html
@@ -27,9 +27,8 @@
             <li><a href="exit.html">Enter the exit room</a></li>
             <li><a href="pool.html">Jump to the unreachable pool</a></li>
             <li><a href="faint.html">Ask N where should you go next</a></li>
-            <li><a href="riddle1.html">Go froward and then take little stairs to enter a room (extremely dangerous)</a></li>
+            <li><a href="riddle1.html">Go forward and then take little stairs to enter a room (extremely dangerous)</a></li>
             <li><a href="lobby.html">Go forward to the of the room</a></li>
-
         </ul>
     </center>
 
