--- a/rooms/pool.html
+++ b/rooms/pool.html
@@ -20,7 +20,7 @@
         <details>
             <summary>N context and question</summary>
             <p>Careful you are being followed, Quick what should you do?<br>
-                YOU ARE ON THE WATER Maybe you can talk things out or even give a hug)</p>
+                YOU ARE ON THE WATER (Maybe you can talk things out or even give a hug)</p>
         </details>
 
         <!-- User options-->
