Added riddle 1 room

--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     <title>Welcome</title>
 </head>
 <body background="images/back.jpg" text="white">
+    
     <center>
+        <!-- Header section -->
+    <header>
         <h1>SCAPE FROM REALITY</h1>
+    </header>
+
+    <figure>
         <img src="images/N_Happy.png" alt="N happy face" width="200" height="200">
+        <figcaption>The Narrator</figcaption>
+    </figure>
+
         <!-- Conversation text from the Narrator. -->
         <article>
             <h2> Hi! Nice seeing you around here.</h2>
@@ -43,5 +52,10 @@
 
         <a href="rooms/lobby.html">CONTINUE</a>
     </center>
+
+    <!-- Footer section -->
+    <footer>
+        <p>Made by Ricardo Chuy</p>
+    </footer>
 </body>
 </html>
