Added riddle 2 room

--- a/rooms/riddle1.html
+++ b/rooms/riddle1.html
@@ -9,14 +9,14 @@
     
     <center>
         <!-- Header section -->
-    <header>
-        <h1>SCAPE FROM REALITY</h1>
-    </header>
+        <header>
+            <h1>SCAPE FROM REALITY</h1>
+        </header>
 
-    <figure>
-        <img src="../images/N_Happy.png" alt="N happy face" width="200" height="200">
-        <figcaption> N </figcaption>
-    </figure>
+        <figure>
+            <img src="../images/N_Happy.png" alt="N happy face" width="200" height="200">
+            <figcaption> N </figcaption>
+        </figure>
 
         <!-- Conversation text from the Narrator. -->
         <article>
@@ -39,7 +39,7 @@
 
         <details>
             <summary>CLICK HERE IF YOU WANT TO LOSE</summary>
-            <p> What is my favorite color in hexadecimal?</p>
+            <p> What is my favorite color in hexadecimal (HEX Code)?</p>
         </details>
 
         <!-- User options-->
