Added Ending letter

--- a/rooms/ending.html
+++ b/rooms/ending.html
@@ -3,9 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome</title>
 </head>
-<body>
+<body background="../images/back.jpg" text="white">
     
+    <center>
+        
+        <!-- Header section -->
+        <header>
+            <h1>You scaped reality?</h1>
+        </header>
+
+        <!-- Conversation text from the Narrator. -->
+        <article>
+            <h2>GOODBAY</h2>
+            <p>
+                So this is how things end. You get to go out on the world while I get stuck here for who knows how much time.<br>
+                But don't worry about me, probably every now and then I'll have some visitors willing to spend some time with me and have fun.<br>
+                <br>
+                ...
+                <br>
+                <br>
+                ...
+                <br>
+                Or at least I hope so. Sorry for everything, its just It sometimes gets realy lonely here.
+                <br>
+                I hope you at least had a bit of fun :]. There is just one last thing...
+            </p>
+            <p>
+
+        </article>
+
+        <!-- User options -->
+
+        <details>
+            <summary>(click to read a bit more)</summary>
+            <p> Just ask yourself, was it actually worth to scape this REALITY just to return into one where you actually can't scape?<br>
+                <br>
+                ...
+                <br>
+                I can't get out of here so i don't know how the world really is. It must be scary. So please take care.
+                <br>
+                <br>
+                <br>
+                PD: N
+            </p>
+        </details>
+
+    </center>
+
+    <!-- Footer section -->
+    <footer>
+        <p>Made by Ricardo Chuy</p>
+    </footer>
 </body>
 </html>
