Made drop down menus more visible

--- a/rooms/ending.html
+++ b/rooms/ending.html
@@ -37,7 +37,7 @@
         <!-- User options -->
 
         <details>
-            <summary>(click to read a bit more)</summary>
+            <summary><b><h3> CLICK HERE FOR MORE INFORMATION</h3></b></summary>
             <p> Just ask yourself, was it actually worth to scape this REALITY just to return into one where you actually can't scape?<br>
                 <br>
                 ...
