--- a/rooms/exit.html
+++ b/rooms/exit.html
@@ -18,7 +18,7 @@
             the narrator question information might get repetitive. So the user can choose when to show it to remember it.
          -->
         <details>
-            <summary>N context and question</summary>
+            <summary><b><h3> CLICK HERE FOR MORE INFORMATION</h3></b></summary>
             <p> Quick! You have multiple options but not much time...</p>
         </details>
 
@@ -29,7 +29,5 @@
             <li><a href="../images/clue1.png">Open the bag on the floor </a></li>
         </ul>
     </center>
-
-    
 </body>
 </html>
