--- a/rooms/faint.html
+++ b/rooms/faint.html
@@ -18,7 +18,7 @@
             the narrator question information might get repetitive. So the user can choose when to show it to remember it.
          -->
         <details>
-            <summary>N context and comment</summary>
+            <summary><b><h3> CLICK HERE FOR MORE INFORMATION</h3></b></summary>
             <p> Whoops that maybe was a bad idea, my bad I guess. But now we get more time to have fun!</p>
         </details>
 
