--- a/rooms/hotel.html
+++ b/rooms/hotel.html
@@ -18,7 +18,7 @@
             the narrator question information might get repetitive. So the user can choose when to show it to remember it.
          -->
         <details>
-            <summary>N context and question</summary>
+            <summary><b><h3> CLICK HERE FOR MORE INFORMATION</h3></b></summary>
             <p>This room is very interesting might as well explre it, and Oh look an exit!</p>
         </details>
 
