--- a/rooms/pool.html
+++ b/rooms/pool.html
@@ -18,7 +18,7 @@
             the narrator question information might get repetitive. So the user can choose when to show it to remember it.
          -->
         <details>
-            <summary>N context and question</summary>
+            <summary><b><h3> CLICK HERE FOR MORE INFORMATION</h3></b></summary>
             <p>Careful you are being followed, Quick what should you do?<br>
                 YOU ARE ON THE WATER (Maybe you can talk things out or even give a hug)</p>
         </details>
