--- a/rooms/pool_succes.html
+++ b/rooms/pool_succes.html
@@ -10,7 +10,7 @@
         <h1>WHAT</h1>
 
         <figure>
-            <img src="../images/pool.jpg" alt="exit img" width="600" height="400">
+            <summary><b><h3> CLICK HERE FOR MORE INFORMATION</h3></b></summary>
             <figcaption>You are in the same room and its deadly quiet</figcaption>
         </figure>
 
