--- a/rooms/riddle1.html
+++ b/rooms/riddle1.html
@@ -44,7 +44,7 @@
 
         <!-- User options-->
         <ul>
-            <li><a href="about.html">#FF5733</a></li>
+            <li><a href="faint.html">#FF5733</a></li>
             <li><a href="faint.html">##FF0000</a></li>
             <li><a href="faint.html">#16A085</a></li>
             <li><a href="faint.html">#F4D03F</a></li>
