--- a/rooms/riddle2.html
+++ b/rooms/riddle2.html
@@ -39,7 +39,7 @@
         <!-- User options -->
 
         <details>
-            <summary>CLICK HERE IF YOU WANT TO LOSE</summary>
+            <summary>CLICK HERE FOR MORE TEXT</summary>
             <p> What is my favorite number?</p>
         </details>
 
@@ -72,12 +72,11 @@
             <li><a href="faint.html">30303</a></li>
             <li><a href="faint.html">40404</a></li>
             <li><a href="faint.html">50505</a></li>
-            <li><a href="faint.html">89234</a></li>
-            <li><a href="riddle3.html">81289</a></li>
+            <li><a href="faint.html">82363</a></li>
+            <li><a href="riddle3.html">89234</a></li>
         </ul>
 
     </center>
-
     <!-- Footer section -->
     <footer>
         <p>Made by Ricardo Chuy</p>
