--- a/rooms/riddle3.html
+++ b/rooms/riddle3.html
@@ -39,7 +39,7 @@
         <!-- User options -->
 
         <details>
-            <summary>CLICK HERE IF YOU WANT TO LOSE</summary>
+            <summary><b><h3> CLICK HERE FOR MORE INFORMATION</h3></b></summary>
             <p> Do you want to scape this REALITY?</p>
         </details>
 
