--- a/rooms/stair.html
+++ b/rooms/stair.html
@@ -18,7 +18,7 @@
             the narrator question information might get repetitive. So the user can choose when to show it to remember it.
          -->
         <details>
-            <summary>N context and question</summary>
+            <summary><b><h3> CLICK HERE FOR MORE INFORMATION</h3></b></summary>
             <p> Look a pool! How cool is that? Lets chill for a bit and enjoy the water</p>
         </details>
 
