--- a/rooms/elevator.html
+++ b/rooms/elevator.html
@@ -18,7 +18,8 @@
             the narrator question information might get repetitive. So the user can choose when to show it to remember it.
          -->
         <details>
-            <summary>N context and question</summary>
+            <summary><b><h3> CLICK HERE FOR MORE INFORMATION</h3></b></summary>
+
             <p> There is only 1 door that appeared out of nowhere behind you. It has the leters EXIT, you made it!</p>
         </details>
 
