--- a/rooms/lobby.html
+++ b/rooms/lobby.html
@@ -18,7 +18,7 @@
             the narrator question information might get repetitive. So the user can choose when to show it to remember it.
          -->
         <details>
-            <summary>N context and question</summary>
+            <summary><b><h3> CLICK HERE FOR MORE INFORMATION</h3></b></summary>
             <p> You seem a bit lost, but you notice 2 different paths that seem to lead to another place:</p>
         </details>
 
