Better description in about and improved index titles

--- a/index.html
+++ b/index.html
@@ -45,12 +45,9 @@
         <!-- Aside content -->
         <aside>
             <h3>Before you start, consider checking the next information</h3>
-            <ul>
-                <li><a href="rooms/about.html">About the creator</a></li>
-            </ul>
-        </aside>
+            <a href="rooms/about.html"><h3>About the creator and the game</h3></a>
 
-        <a href="rooms/lobby.html">CONTINUE</a>
+        <a href="rooms/lobby.html"><h3>CONTINUE</h3></a>
     </center>
 
     <!-- Footer section -->
