--- a/rooms/about.html
+++ b/rooms/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>About Me and the game</title>
 </head>
 <body>
     <center>
@@ -15,7 +15,9 @@
         <p>
             an interesting and immersive story using only HTML. I made my story inspired in suspense and fiction.
         <p>
-            Hope you enjoy it!
+            Hope you enjoy it! To win you will have the maze of "The Narrator" AKA N. He does not want you to leave.
+        <p>
+            So don't trust everythin he says. Explore and find 2 sticky notes with clues to find the exit.
         </p>
 
     </center>
